# Ilias

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitpod.yml  CMakeLists.txt  LICENSE  README.md  README_zh.md  xmake.lua
.github/workflows/: depoly_docs.yml  release.yml  xmake-test-on-linux.yml  xmake-test-on-msys2.yml  xmake-test-on-windows-clang.yml  xmake-test-on-windows.yml
benchmark/: asio_server.cpp  ilias_benchmark.cpp  ilias_server.cpp  xmake.lua
cmake/: FindDependencies.cmake  IliasConfig.cmake.in  IliasConfigVersion.cmake.in
docs/: index.md  package-lock.json
docs/.vitepress/: config.mts
docs/dev/: api.md
docs/guides/: quick-start.md  what-is-ilias.md
docs/zh/: index.md
docs/zh/dev/: agent-reference.md  api.md
docs/zh/guides/: build-async-software.md  quick-start.md  what-is-ilias.md
example/: console_echo.cpp  delegate_ctxt.cpp  httpserver.cpp  xmake.lua
example/console/: console.cpp  echo.cpp
example/http/: httpserver.cpp
example/process/: ls.cpp
example/qt/: qt.cpp  qt.lua  qt.ui
include/: ilias.cppm  ilias.hpp  ilias_async.hpp  ilias_await.hpp  ilias_backend.hpp  ilias_channel.hpp  ilias_co.hpp  ilias_crypt.hpp  ilias_expected.hpp  ilias_file.hpp  ilias_http.hpp  ilias_http_1.1.hpp  ilias_http_1x1.hpp  ilias_http_cookie.hpp  ilias_http_core.hpp  ilias_http_headers.hpp  ilias_http_hpack.hpp  ilias_http_reply.hpp  ilias_http_request.hpp  ilias_http_session.hpp  ilias_http_transfer.hpp  ilias_http_zlib.hpp  ilias_inet.hpp  ilias_iocp.cpp  ilias_iocp.hpp  ilias_iocp.inl  ilias_latch.hpp  ilias_loop.hpp  ilias_mutex.hpp  ilias_networking.hpp  ilias_poll.hpp  ilias_qt.hpp  ilias_resolver.hpp  ilias_ring.hpp  ilias_scope.hpp  ilias_socks5.hpp  ilias_source_location.hpp  ilias_ssl.hpp  ilias_ssl_openssl.hpp  ilias_ssl_schannel.hpp  (+4 more)
include/ilias/: buffer.hpp  cancellation_token.hpp  console.hpp  coro.hpp  crypt.hpp  defines.hpp  error.hpp  expected.hpp  fiber.hpp  fs.hpp  http.hpp  ilias.hpp  inet.hpp  io.hpp  log.hpp  net.hpp  networking.hpp  platform.hpp  process.hpp  qt.hpp  resolver.hpp  result.hpp  signal.hpp  socks5.hpp  ssl.hpp  sync.hpp  task.hpp  testing.hpp  tls.hpp  url.hpp  zlib.hpp
include/ilias/coro/: awaiter.hpp  cancel_handle.hpp  channel.hpp  coro_handle.hpp  join_handle.hpp  loop.hpp  mini_loop.hpp  mutex.hpp  promise.hpp  scope.hpp  sleep.hpp  task.hpp  task_await.hpp  timer.hpp  when_all.hpp  when_any.hpp
include/ilias/detail/: charcvt.hpp  config.hpp.cmake.in  config.hpp.in  expected.hpp  functional.hpp  intrusive.hpp  mem.hpp  option.hpp  overloads.hpp  refptr.hpp  ring.hpp  scope_exit.hpp  timer.hpp  win32.hpp  win32defs.hpp
include/ilias/fiber/: fiber.hpp
include/ilias/fs/: console.hpp  file.hpp  path.hpp  pipe.hpp
include/ilias/http/: 2.hpp  cookie.hpp  headers.hpp  hpack.hpp  http1.1.hpp  http2.hpp  reply.hpp  request.hpp  session.hpp  transfer.hpp  ws.hpp
include/ilias/inet/: address.hpp  addrinfo.hpp  endpoint.hpp  sockfd.hpp  sys.hpp
include/ilias/io/: context.hpp  cstdio.hpp  duplex.hpp  dyn_traits.hpp  error.hpp  ext.hpp  fd.hpp  fd_utils.hpp  mem.hpp  method.hpp  stream.hpp  system_error.hpp  traits.hpp  vec.hpp
include/ilias/net/: address.hpp  addrinfo.hpp  backend.hpp  endpoint.hpp  iocp.hpp  msg.hpp  msghdr.hpp  pipe.hpp  poll.hpp  poller.hpp  socket.hpp  sockfd.hpp  sockopt.hpp  socks5.hpp  stream.hpp  system.hpp  tcp.hpp  traits.hpp  udp.hpp  unix.hpp
include/ilias/platform/: delegate.hpp  epoll.hpp  iocp.hpp  platform.hpp  qt.hpp  qt_utils.hpp  uring.hpp  winmsg.hpp
include/ilias/process/: process.hpp
include/ilias/runtime/: await.hpp  capture.hpp  coro.hpp  exception.hpp  executor.hpp  functional.hpp  timer.hpp  token.hpp  tracing.hpp
include/ilias/signal/: signal.hpp
include/ilias/sql/: mysql.hpp
include/ilias/ssl/: openssl.hpp  schannel.hpp
include/ilias/sync/: event.hpp  latch.hpp  mpmc.hpp  mpsc.hpp  mutex.hpp  (+3 more)
include/ilias_qt/: README.md  adapter.hpp  dialog.hpp  network.hpp  object.hpp
scripts/: data_filter.ipynb  ilias.natvis  staticHeaders.csv  staticHuffman.txt
src/: fiber.cpp  ilias.cppm  io.cpp  log.cpp  process.cpp  runtime.cpp  singleton.hpp  sync.cpp  task.cpp  xmake.lua
src/console/: webui.cpp
src/fiber/: fiber.cpp  libucontext.hpp
src/linux/: aio_core.hpp  blocking.cpp  epoll.cpp  libucontext.hpp  process.cpp  signal.cpp  uring.cpp  uring_core.hpp  uring_ops.hpp
src/net/: addrinfo.cpp
src/tls/: openssl.cpp  schannel.cpp
src/win32/: blocking.cpp  io_context.cpp  iocp_afd.hpp  iocp_ops.hpp  ntdll.cpp  ntdll.hpp  overlapped.hpp  process.cpp  signal.cpp  win32.cpp
tests/: test_addr.cpp  test_async.cpp  test_co.cpp  test_dns.cpp  test_expected.cpp  test_hpack.cpp  test_http.cpp  test_httpserver.cpp  test_ntp.cpp  test_qt.cpp  test_qt.ui  test_ring.cpp  test_ssl.cpp  test_sync.cpp  testing.hpp  xmake.lua
tests/detail/: intrusive.cpp
tests/fiber/: fiber.cpp  test_fiber.cpp
tests/fs/: fs.cpp  test_fs.cpp
tests/io/: io.cpp  test_io.cpp
tests/modules/: modules.lua  test_modules.cpp
tests/net/: net.cpp  test_address.cpp  test_endpoint.cpp  test_getaddrinfo.cpp  test_net.cpp  test_tcp.cpp  test_udp.cpp
tests/process/: process.cpp  test_process.cpp
tests/qt/: qt.lua  qtest.cpp  qtest.hpp  qtest.lua  test_qt.cpp  test_qt.hpp
tests/signal/: signal.cpp  signal.lua  test_signal.cpp
tests/sync/: sync.cpp  test_event.cpp  test_latch.cpp  test_mpmc.cpp  test_mpsc.cpp  test_mutex.cpp  test_oneshot.cpp  test_semaphore.cpp  test_sync.cpp
tests/task/: subscriber.hpp  task.cpp  task_extra.cpp  test_task.cpp  test_task_extra.cpp
tests/tls/: certs.inl  test_tls.cpp  tls.cpp
tests/unit/: buffer.cpp  cancellation_token.cpp  crypt.cpp  error.cpp  url.cpp
(+82 files in other folders)
